[fix] Corrections SONAR